<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sages</groupId>
    <artifactId>kafka-basics</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>2-kafka-java-advanced</module>
        <module>3-kafka-consumer-spring</module>
        <module>3-kafka-producer-spring</module>
        <module>4-kafka-connect/kafka-connect-mlflow-main</module>
        <module>6-kafka-streams</module>
        <module>model</module>
        <module>5-schema-registry</module>
    </modules>


</project>